--- a/examples/btreemap_vs_hashmap/canbench_results.yml
+++ b/examples/btreemap_vs_hashmap/canbench_results.yml
@@ -1,6 +1,7 @@
 benches:
   insert_users:
     total:
+      start_instructions: 18054
       calls: 1
       instructions: 2558172165
       heap_increase: 871
@@ -8,26 +9,30 @@ benches:
     scopes: {}
   pre_upgrade_bench:
     total:
+      start_instructions: 2558190017
       calls: 1
-      instructions: 486879875
+      instructions: 486879758
       heap_increase: 519
       stable_memory_increase: 184
     scopes:
       serialize_state:
+        start_instructions: 0
         calls: 1
-        instructions: 423940172
+        instructions: 423940131
         heap_increase: 519
         stable_memory_increase: 0
       writing_to_stable_memory:
+        start_instructions: 0
         calls: 5
-        instructions: 62932223
+        instructions: 62932528
         heap_increase: 0
         stable_memory_increase: 184
   remove_users:
     total:
+      start_instructions: 2558190018
       calls: 1
       instructions: 2109136823
       heap_increase: 0
       stable_memory_increase: 0
     scopes: {}
-version: 0.1.15
+version: 0.1.16
