--- a/examples/fibonacci/canbench_results.yml
+++ b/examples/fibonacci/canbench_results.yml
@@ -1,27 +1,31 @@
 benches:
   fibonacci_20:
     total:
+      start_instructions: 17967
       calls: 1
-      instructions: 729
+      instructions: 732
       heap_increase: 0
       stable_memory_increase: 0
     scopes: {}
   fibonacci_45:
     total:
+      start_instructions: 17967
       calls: 1
-      instructions: 1304
+      instructions: 1307
       heap_increase: 0
       stable_memory_increase: 0
     scopes: {}
   fibonacci_8a:
     total:
+      start_instructions: 17967
       calls: 1
-      instructions: 453
+      instructions: 456
       heap_increase: 0
       stable_memory_increase: 0
     scopes: {}
   fibonacci_8b:
     total:
+      start_instructions: 18053
       calls: 1
       instructions: 207
       heap_increase: 0
@@ -29,9 +33,10 @@ benches:
     scopes: {}
   fibonacci_8c:
     total:
+      start_instructions: 17967
       calls: 1
-      instructions: 394
+      instructions: 397
       heap_increase: 0
       stable_memory_increase: 0
     scopes: {}
-version: 0.1.15
+version: 0.1.16
