--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,8 @@ jobs:
         run: cargo clippy --tests --benches -- -D clippy::all
 
       - name: Test
+        # Do not use `--all-features` because it enables `overwrite`, which auto-updates expected outputs.
+        # This makes tests always pass by overwriting failures, effectively disabling test validation.
         run: cargo test --features=canbench --color always -- --color always --test-threads=1
         env:
           RUST_BACKTRACE: 1
