--- a/canbench-bin/Cargo.toml
+++ b/canbench-bin/Cargo.toml
@@ -23,7 +23,7 @@ hex.workspace = true
 inferno = { version = "0.11", default-features = false, features = ["multithreaded", "nameattr"] }
 # `pocket-ic` should be pinned to an exact version so that the PocketIC server binary version
 # `POCKET_IC_SERVER_VERSION` defined in `canbench-bin/src/lib.rs` is compatible.
-pocket-ic = "10.0.0"
+pocket-ic = "=10.0.0"
 reqwest.workspace = true
 rustc-demangle.workspace = true
 semver.workspace = true
