--- a/canbench-bin/Cargo.toml
+++ b/canbench-bin/Cargo.toml
@@ -1,32 +1,29 @@
 [package]
-name = "canbench"
 description = "A benchmarking framework for canisters on the Internet Computer."
 edition = "2021"
 keywords = ["benchmark", "canister", "ic", "internet-computer", "perf"]
 license = "Apache-2.0"
+name = "canbench"
 readme = "../README.md"
 repository = "https://github.com/dfinity/canbench"
 # NOTE: Update `canbench-rs` version below when this changes.
-version = "0.2.1"
+version = "0.2.2"
 
 [[bin]]
 name = "canbench"
 path = "src/main.rs"
 
 [dependencies]
-canbench-rs = { path = "../canbench-rs", version = "0.2.1" }
+canbench-rs = { path = "../canbench-rs", version = "0.2.2" }
 candid.workspace = true
 clap.workspace = true
 colored.workspace = true
 flate2.workspace = true
 hex.workspace = true
-inferno = { version = "0.11", default-features = false, features = [
-    "multithreaded",
-    "nameattr",
-] }
+inferno = { version = "0.11", default-features = false, features = ["multithreaded", "nameattr"] }
 # `pocket-ic` should be pinned to an exact version so that the PocketIC server binary version
 # `POCKET_IC_SERVER_VERSION` defined in `canbench-bin/src/lib.rs` is compatible.
-pocket-ic = "=9.0.0"
+pocket-ic = "=10.0.0"
 reqwest.workspace = true
 rustc-demangle.workspace = true
 semver.workspace = true
@@ -42,5 +39,5 @@ pretty_assertions = "1.4.0"
 
 [features]
 # Enables automatic overwriting of expected test output files during test runs.
-overwrite = []
 calls = []
+overwrite = []
