--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ clap = { version = "4.5.40", features = ["derive"] }
 colored = "3.0.0"
 flate2 = "1.1.2"
 hex = "0.4.3"
-ic-cdk = "0.19.0-beta.3"
+ic-cdk = { git = "https://github.com/dfinity/cdk-rs.git", rev = "46c13b59cf96c3032428a8c7b6a2912caa5d4c90" } # branch spofford/x-late-reply
 proc-macro2 = "1.0.95"
 quote = "1.0.40"
 reqwest = { version = "0.12.20", features = [
