--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ clap = { version = "4.5.40", features = ["derive"] }
 colored = "3.0.0"
 flate2 = "1.1.2"
 hex = "0.4.3"
-ic-cdk = { git = "https://github.com/dfinity/cdk-rs.git", rev = "e1e611ea80d72f9836f910f7179b43685079ce15" } # branch spofford/late-reply
+ic-cdk = { git = "https://github.com/dfinity/cdk-rs.git", rev = "c71f7e8adad3970d611139651be96c69c558d416" } # branch spofford/concurrent-closures
 proc-macro2 = "1.0.95"
 quote = "1.0.40"
 reqwest = { version = "0.12.20", features = [
