--- a/.github/workflows/publish-rs.yml
+++ b/.github/workflows/publish-rs.yml
@@ -33,10 +33,10 @@ jobs:
         env:
           CARGO_REGISTRY_TOKEN: ${{ steps.auth.outputs.token }}
 
-      - name: Send Slack message
-        uses: slackapi/slack-github-action@91efab103c0de0a537f72a35f6b8cda0ee76bf0a
+      - name: Post to a Slack channel
+        uses: slackapi/slack-github-action@6c661ce58804a1a20f6dc5fbee7f0381b469e001 # v1.25.0
         with:
-          webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
-          webhook-type: incoming-webhook
-          payload: |
-            text: "New `canbench-rs` crate (version `${{ github.ref_name }}`) has been published to crates.io"
+          channel-id: eng-dsm-alerts
+          slack-message: "New `canbench-rs` crate (version `${{ github.ref_name }}`) has been published to crates.io"
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_API_TOKEN }}
