--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,17 +1,17 @@
-name: Publish canbench-rs to crates.io
+name: Publish canbench crates to crates.io
 
 on:
   workflow_run:
-    workflows: [Publish canbench-rs-macros to crates.io]
+    workflows: [Publish canbench-rs to crates.io]
     types:
       - completed
 
 jobs:
-  publish-canbench-rs:
+  publish-canbench-bin:
     runs-on: ubuntu-latest
-    
+
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
-    
+
     permissions:
       id-token: write # Required for OIDC token exchange
 
@@ -21,15 +21,26 @@ jobs:
       - uses: rust-lang/crates-io-auth-action@v1
         id: auth
 
-      - name: Set Cargo.toml versions
+      - name: Set Cargo.toml version
         shell: bash
         env:
           RELEASE_TAG: ${{ github.ref }}
         run: |
+          sed -i -e "s/0\\.0\\.0-git/${RELEASE_TAG##*\/v}/" canbench-rs-macros/Cargo.toml
           sed -i -e 's/\(^canbench-rs-macros.*"\).* }/\1, version="'"${RELEASE_TAG##*\/v}"'" }/' canbench-rs/Cargo.toml 
           sed -i -e "s/0\\.0\\.0-git/${RELEASE_TAG##*\/v}/" canbench-rs/Cargo.toml
+          sed -i -e 's/\(^canbench-rs.*"\).* }/\1, version="'"${RELEASE_TAG##*\/v}"'" }/' canbench-bin/Cargo.toml 
+          sed -i -e "s/0\\.0\\.0-git/${RELEASE_TAG##*\/v}/" canbench-bin/Cargo.toml
+
+      - run: cargo publish -p canbench-rs-macros
+        env:
+          CARGO_REGISTRY_TOKEN: ${{ steps.auth.outputs.token }}
 
       - run: cargo publish -p canbench-rs
+        env:
+          CARGO_REGISTRY_TOKEN: ${{ steps.auth.outputs.token }}
+
+      - run: cargo publish -p canbench
         env:
           CARGO_REGISTRY_TOKEN: ${{ steps.auth.outputs.token }}
 
@@ -37,6 +48,6 @@ jobs:
         uses: slackapi/slack-github-action@6c661ce58804a1a20f6dc5fbee7f0381b469e001 # v1.25.0
         with:
           channel-id: eng-dsm-alerts
-          slack-message: "New `canbench-rs` crate (version `${{ github.ref_name }}`) has been published to crates.io"
+          slack-message: "New `canbench` crates (version `${{ github.ref_name }}`) has been published to crates.io"
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_API_TOKEN }}
