--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,15 +31,15 @@ jobs:
           sed -i '' -e 's/\(^canbench-rs.*"\).* }/\1, version="'"${RELEASE_TAG##*\/v}"'" }/' canbench-bin/Cargo.toml 
           sed -i '' -e "s/0\\.0\\.0-git/${RELEASE_TAG##*\/v}/" canbench-bin/Cargo.toml
 
-      - run: cargo publish -p canbench-rs-macros
+      - run: cargo publish -p canbench-rs-macros --allow-dirty
         env:
           CARGO_REGISTRY_TOKEN: ${{ steps.auth.outputs.token }}
 
-      - run: cargo publish -p canbench-rs
+      - run: cargo publish -p canbench-rs --allow-dirty
         env:
           CARGO_REGISTRY_TOKEN: ${{ steps.auth.outputs.token }}
 
-      - run: cargo publish -p canbench
+      - run: cargo publish -p canbench --allow-dirty
         env:
           CARGO_REGISTRY_TOKEN: ${{ steps.auth.outputs.token }}
 
