--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -143,8 +143,7 @@ jobs:
     needs:
       - build
       - shell-checks
-      # TODO: re-enable this after merging
-      # - benchmark
+      - benchmark
     runs-on: ubuntu-latest
     steps:
       - name: check build result
