--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -143,7 +143,8 @@ jobs:
     needs:
       - build
       - shell-checks
-      # TODO re-enable benchmark after merging 
+      # TODO re-enable after merging 
+      #- benchmark
     runs-on: ubuntu-latest
     steps:
       - name: check build result
@@ -154,6 +155,6 @@ jobs:
         if: ${{ needs.shell-checks.result != 'success' }}
         run: exit 1
 
-      - name: check benchmark result
-        if: ${{ needs.benchmark.result != 'success' }}
-        run: exit 1
+      #- name: check benchmark result
+      #  if: ${{ needs.benchmark.result != 'success' }}
+      #  run: exit 1
