--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,6 +2,11 @@ name: Publish canbench crates to crates.io
 
 on:
   workflow_dispatch:
+    inputs:
+      dryRun:
+        description: "Run cargo publish with --dry-run"
+        required: true
+        type: boolean
 
 jobs:
   publish-canbench:
@@ -16,15 +21,15 @@ jobs:
       - uses: rust-lang/crates-io-auth-action@v1
         id: auth
 
-      - run: cargo publish -p canbench-rs-macros
+      - run: cargo publish -p canbench-rs-macros ${{ inputs.dryRun == true && '--dry-run' || '' }}
         env:
           CARGO_REGISTRY_TOKEN: ${{ steps.auth.outputs.token }}
 
-      - run: cargo publish -p canbench-rs
+      - run: cargo publish -p canbench-rs ${{ inputs.dryRun == true && '--dry-run' || '' }}
         env:
           CARGO_REGISTRY_TOKEN: ${{ steps.auth.outputs.token }}
 
-      - run: cargo publish -p canbench
+      - run: cargo publish -p canbench ${{ inputs.dryRun == true && '--dry-run' || '' }}
         env:
           CARGO_REGISTRY_TOKEN: ${{ steps.auth.outputs.token }}
 
@@ -32,6 +37,6 @@ jobs:
         uses: slackapi/slack-github-action@6c661ce58804a1a20f6dc5fbee7f0381b469e001 # v1.25.0
         with:
           channel-id: eng-dsm-alerts
-          slack-message: "New `canbench` crates (version `${{ github.ref_name }}`) has been published to crates.io"
+          slack-message: "${{ inputs.dryRun == true && 'DRY RUN: ' || '' }}New `canbench` crates (version `${{ github.ref_name }}`) has been published to crates.io"
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_API_TOKEN }}
