--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,6 +21,8 @@ jobs:
       - uses: rust-lang/crates-io-auth-action@v1
         id: auth
 
+      - run: echo "Preparing to cargo publish ${{ github.ref_name }}."
+      # Crates need to be published in this specific order
       - run: cargo publish -p canbench-rs-macros ${{ inputs.dryRun == true && '--dry-run' || '' }}
         env:
           CARGO_REGISTRY_TOKEN: ${{ steps.auth.outputs.token }}
